# bazelpain

./: BUILD.bazel  WORKSPACE  config.json  deps.bzl  go.mod  go.sum  main.go  main.go1
argolib/: BUILD.bazel  argolib.go1
mylib/: mylib.go1
mylib2/: BUILD.bazel  mylib2.go
