load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix fsedano.net/test
# gazelle:go_naming_convention import_alias
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    args = [
        "-go_naming_convention=import_alias",
    ],
)

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "fsedano.net/test",
    visibility = ["//visibility:private"],
    deps = [
        "//mylib2",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
