load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix fsedano.net/test
# gazelle:go_naming_convention import_alias
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    args = [
        "-go_naming_convention=import_alias",
    ],
)

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

go_library(
    name = "gin_lib",
    srcs = ["main.go"],
    importpath = "fsedano.net/test",
    visibility = ["//visibility:private"],
    deps = [
        "//argolib",
        "//mylib2",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "gin",
    embed = [":gin_lib"],
    visibility = ["//visibility:public"],
)

nogo(
    name = "my_nogo",
    config = ":config.json",
    visibility = ["//visibility:public"],  # must have public visibility
    vet = True,
    deps = [
        # analyzer from the local repository
        #":importunsafe",
        # analyzer from a remote repository
        #"@org_golang_x_tools//go/analysis/passes/printf:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/ifaceassert",
        "@org_golang_x_tools//go/analysis/passes/unusedresult",
        "@org_golang_x_tools//go/analysis/passes/shadow:shadow"
    ],
)

go_library(
    name = "importunsafe",
    srcs = ["importunsafe.go"],
    importpath = "importunsafe",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_default_library"],
)
