load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "argolib",
    srcs = ["argolib.go"],
    importpath = "fsedano.net/test/argolib",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_argoproj_argo_workflows_v3//pkg/apis/workflow/v1alpha1",
        "@com_github_argoproj_argo_workflows_v3//pkg/client/clientset/versioned",
        "@com_github_argoproj_pkg//errors",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/fields",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_utils//pointer",
    ],
)

alias(
    name = "go_default_library",
    actual = ":argolib",
    visibility = ["//visibility:public"],
)
